slight small fix
removed awkward 'd' and spacing of volume

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </section>
 
               <section class="right-small">
-                <a class="right-off-canvas-toggle menu-icon" ><span></span></a>
+                <a class="right-off-canvas-toggle menu-icon"><span></span></a>
               </section>
             </nav>
 
@@ -45,7 +45,7 @@
                 <li><a href="#">Settings</a></li>
 
               </ul>
-            </aside>d
+            </aside>
 
             <aside class="right-off-canvas-menu">
               <ul class="off-canvas-list">
